--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,6 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-test {
+tasks.named('test') { {
 	useJUnitPlatform()
 }
