--- a/.github/workflows/java-spring-test.yml
+++ b/.github/workflows/java-spring-test.yml
@@ -7,9 +7,25 @@ on:
   pull_request:
     branches:
       - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:8.0
+        ports:
+          - 3306:3306
+        env:
+          MYSQL_ROOT_PASSWORD: ${{ secrets.RootPassword }} # 루트 비밀번호
+          MYSQL_DATABASE: test_db # 생성할 데이터베이스 이름
+          MYSQL_USER: ino # 사용자 이름
+          MYSQL_PASSWORD: ${{ secrets.DatabasePassword }} # 사용자 비밀번호
+        options: >-
+          --health-cmd="mysqladmin ping -h localhost --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
     - name: Checkout code
@@ -23,5 +39,8 @@ jobs:
       run: ./gradlew build
 
     - name: Run tests
+      env:
+        SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/study_db
+        SPRING_DATASOURCE_USERNAME: root
+        SPRING_DATASOURCE_PASSWORD: ${{ secrets.DatabasePassword }}
       run: ./gradlew test 
-    
